--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "godaddy-dns-updater"
-version = "0.1.0"
+version = "0.2.0-alpha"
 authors = ["Ryan Macdonald <macdonaldr93@gmail.com>"]
 
 [dependencies]
