--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.2.0-alpha"
 authors = ["Ryan Macdonald <macdonaldr93@gmail.com>"]
 
 [dependencies]
-clap = "2.29.0"
+clap = "2.29"
 futures = "0.1"
 hyper = "0.11"
-hyper-tls = "0.1.2"
+hyper-tls = "0.1"
 tokio-core = "0.1"
+serde = "1.0"
 serde_json = "1.0"
+serde_derive = "1.0"
 curl = "0.4"
