--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "godaddy-dns-updater"
-version = "0.2.0-alpha"
+version = "0.2.0"
 authors = ["Ryan Macdonald <macdonaldr93@gmail.com>"]
 
 [dependencies]
@@ -12,4 +12,3 @@ tokio-core = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
-curl = "0.4"
