--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "godaddy-dns-updater"
-version = "0.2.0"
-authors = ["Ryan Macdonald <macdonaldr93@gmail.com>"]
+version = "1.0.0"
+authors = ["Ryan Macdonald <hi@ryanmacdonald.ca>"]
+edition = "2021"
 
 [dependencies]
-clap = "2.29"
-futures = "0.1"
-hyper = "0.11"
-hyper-tls = "0.1"
-tokio-core = "0.1"
-serde = "1.0"
+clap = { version = "4.4", features = ["derive"] }
+futures = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_derive = "1.0"
+tokio = { version = "1", features = ["full"] }
